# odoo_installer

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: Anwenderanleitung.md  Installationsanleitung_Linux.md  Testlauf_Installation_Addons_Backup.md
src/odoo_installer/: __init__.py  backup_restore.py  cli.py  models.py  pipeline.py  prompts.py  ssh.py  state.py  support_ssh.py  ui.py
tests/: test_backup_restore.py  test_cli_config.py  test_cli_restic_operations.py  test_custom_addons.py  test_odoo_database_init.py  test_pipeline_db_init.py  test_pipeline_rollback.py  test_postgres_database_encoding.py  test_restic_backup_setup.py  test_ssh_executor.py  test_state.py  test_status_bar.py  test_support_ssh.py  test_ui.py  test_validation.py
