[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "odoo-installer"
version = "0.1.0"
description = "Gefuehrter Installer fuer Odoo 19 auf Ubuntu 24.04 via SSH"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["paramiko>=3.4,<4"]

[project.scripts]
odoo-installer = "odoo_installer.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
