[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "odoo-installer"
version = "0.1.7"
description = "Gefuehrter Installer fuer Odoo 19 auf Ubuntu 24.04 (lokale Ausfuehrung)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
odoo-installer = "odoo_installer.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
